<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sweng.swatcher.fragment.ConnectionSettingsFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:text="IP ADDRESS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:background="?attr/colorControlHighlight"
                android:textStyle="normal|bold" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/colorControlHighlight">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/IP1"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/IP2"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/IP3"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/IP4"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="?attr/colorControlHighlight">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:text="STREAM PORT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView7"
                        android:gravity="center_vertical|center_horizontal"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="normal|bold" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/streaming_port"
                        android:gravity="center_vertical|center_horizontal" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:text="COMMAND PORT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView14"
                        android:gravity="center_vertical|center_horizontal"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="normal|bold" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/command_port"
                        android:gravity="center_vertical|center_horizontal" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:text="WEB PORT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView16"
                        android:gravity="center_vertical|center_horizontal"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="normal|bold" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/web_port"
                        android:gravity="center_vertical|center_horizontal" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="159dp"
                android:layout_marginTop="40dp"
                android:weightSum="1"
                android:background="?attr/colorControlHighlight">

                <TextView
                    android:text="USERNAME"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView17"
                    android:gravity="center_horizontal"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="normal|bold" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/username"
                    android:inputType="text"
                    android:layout_weight="0.35"
                    android:gravity="center_vertical|center_horizontal" />

                <TextView
                    android:text="PASSWORD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView18"
                    android:gravity="center_horizontal"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginTop="10dp"
                    android:textStyle="normal|bold" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/password"
                    android:inputType="text"
                    android:layout_weight="0.57"
                    android:gravity="center_vertical|center_horizontal" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_gravity="bottom"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    app:fabSize="normal"
                    app:srcCompat="@android:drawable/ic_menu_save"
                    android:id="@+id/save_button"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
