<resources>
    <string name="app_name">Swatcher</string>

    <string name="navigation_drawer_open">Open Menu</string>
    <string name="navigation_drawer_close">Close Menu</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="picture_types">
        <item>jpeg</item>
        <item>ppm</item>
    </string-array>

    <string-array name="on_detection_values">
        <item>on</item>
        <item>off</item>
        <item>first</item>
        <item>center</item>
        <item>best</item>
    </string-array>

    <string name="new_credentials_test_message">New Username: user | New Password: password</string>

</resources>

