<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/single_item_gallery">


    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/action_settings"
        android:scaleType="centerInside" />

    <TextView
        android:id="@+id/img_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/image"
        android:layout_toRightOf="@+id/image"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/img_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_name"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@+id/image"
        android:textColor="@android:color/darker_gray" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_delete"
        android:id="@+id/deleteButton"
        android:layout_alignBottom="@+id/image"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="5dp" />


</RelativeLayout>



